--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "portfolio-site",
+  "main": "server.js",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "firebase deploy --only functions,hosting"
   },
   "dependencies": {
     "@headlessui/react": "^1.6.6",
